<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/area0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:background="#FFCCCC"
            android:elevation="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/block0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:paddingTop="8dp"
                android:text="Ważne, Pilne"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/zero"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="8dp"
                tools:listitem="@layout/task_item" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="6dp"
            android:background="#FFDDCC"
            android:elevation="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/block1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:paddingTop="8dp"
                android:text="Ważne, Niepilne"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                tools:listitem="@layout/task_item" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="12dp"
            android:background="#FFEECC"
            android:elevation="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/block2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:paddingTop="8dp"
                android:text="Nieważne, Pilne"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                tools:listitem="@layout/task_item" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="#FFFFCC"
            android:elevation="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/block3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:paddingTop="8dp"
                android:text="Nieważne, Niepilne"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                tools:listitem="@layout/task_item" />

        </LinearLayout>

    </GridLayout>

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:alpha="0.6"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/addTaskButton" />

    <ImageButton
        android:id="@+id/addTaskButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:alpha="0.6"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/settingsButton"
        app:layout_constraintRight_toLeftOf="@+id/completedTasksButton" />

    <ImageButton
        android:id="@+id/completedTasksButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:alpha="0.6"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_assignment_turned_in_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/addTaskButton"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>